# bulletd

./: Cargo.toml  PRD.md  README.md
.github/workflows/: ci.yml
crates/bulletd-core/: Cargo.toml
crates/bulletd-core/src/: config.rs  error.rs  id.rs  lib.rs  model.rs  ops.rs  parser.rs  serializer.rs
crates/bulletd-mcp/: Cargo.toml
crates/bulletd-mcp/src/: lib.rs  params.rs  server.rs
crates/bulletd-tui/: Cargo.toml
crates/bulletd-tui/src/: app.rs  bullet_form.rs  init.rs  main.rs  theme.rs
docs/: index.html
samples/: 2026-04-05.md  2026-04-06.md  backlog.md
