[package]
name = "bulletd-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
bulletd-core = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
