[package]
name = "bulletd-tui"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/plattnum/bulletd"

[[bin]]
name = "bulletd"
path = "src/main.rs"

[dependencies]
bulletd-core = { workspace = true }
bulletd-mcp = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
color-eyre = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
tui-textarea = { workspace = true }
notify = "7"
notify-debouncer-mini = "0.5"
